# joinem

./: .gitignore  Cargo.toml  Default.toml  Joinem_Example.toml  README.md  log4rs.yaml  test.html
src/: amazon.rs  bot.rs  config.rs  hyper.rs  index.html  main.rs  newegg.rs  routes.rs  types.rs  util.rs  webdriver.rs
src/amazon/: elements.rs  mod.rs
src/newegg/: elements.rs  mod.rs  utag_data.rs
