[package]
name = "joinem"
version = "0.1.0"
authors = ["Jonathan Rowlands <jonrowlands83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.13.9", features = ["stream"] }
tokio = { version = "0.2", features = ["full"] }
# warp = {git = "https://github.com/seanmonstar/warp.git", branch="master"}
warp = "0.2.5"
pretty_env_logger = "0.4.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
listenfd = "0.3.3"
# tower = "0.3"
fantoccini = "0.14.2"
webdriver = "0.41.0"
async-std = "1.7.0"
serde_json = "1.0"
rand = "0.7.3"
fs_extra = "1.2.0"
log = "0.4.11"
env_logger = "0.8.2"
# currency = "0.4.0"
# num = "0.1.32"
bigdecimal = "0.2.0"
lazy_static = "1.4.0"
config = "0.10.1"

ctrlc = "3.1.7"
rm_rf = "0.6.0"
serde_derive = "1.0.118"
serde = { version = "1.0", features = ["derive"] }
# url = "2.2.0"
log4rs = "0.13.0"
